--- a/portfolio.html
+++ b/portfolio.html
@@ -43,22 +43,35 @@
                 <div class="col-sm-7 mr-auto mt-3 mb-3" id="about_me_box">
                     <h2 class="mb-0">About Me</h2>
                     <hr>
-                    <span>
-                        <img class="img-fluid float-left m-3" src="assets/images/IMG_20151009_114740.jpg" alt="ooops" width="200">
-                        <!-- <img class="img-fluid float-left m-3" src="assets/images/IMG_20151009_114748.jpg" alt="ooops" width="200" height="300"> -->
-                    </span>
-                    
-                    <p class="m-3">
-                        Ever evolving web technologies have kept me fascinated for years and now have brought me to this boot camp to learn full stack development.
-                        <br><br>
-                        I have spent several years developing and testing software protocols for cellular network technology such as GPRS, UMTS, and 2G/3G in early 2000s. And for past 12+ years, I have been successfully running 2 franchised restaurants. My involvement with Franchisee System has sharpened my Fiscal & Business Management, Organizational, Negotiation, and Interpersonal skills.
-                        <br><br>
-                        However, my passion of coding and networking always stayed with me. I have automated many repetitive tasks of accountings and payrolls with coding scripts and Microsoft Office. I have designed & maintained failsafe Internet Networks with utmost security & scalability. I was one of the six Franchisees who took an initiative to design, implement, and debug Point of Sales Systems with the Franchisor, which has been rolled out to 1500+ restaurants.  I have kept up with developments in the field of technology by reading articles and online tutorials.
-                        <br><br>
-                        During this boot camp, Frontend is where I will struggle more as UI/GUI is not my forte and Backend is where I should be ok as I have done a lot of work on server side with scripts, queries, and algorithms.
-                        <br><br>
-                        I am hoping to learn ins and outs of web technologies from this boot camp and hit the ground running.
-                    </p>
+                    <div class="portfolio_content">
+                        <div class="portfolio">
+                            <span class="a1">
+                                <img src="assets/images/papamurphys.PNG" alt="Papa Murphy's">
+                                <img src="assets/images/papamurphys2.PNG" alt="Papa Murphy's">
+                            </span>
+                            <div class="port_text_banner"><h3>Project Papa</h3></div>
+                        </div>
+                        <div class="portfolio">
+                            <img src="assets/images/papamurphys2.PNG" alt="Papa Murphy's">
+                            <div class="port_text_banner"><h3>Eat Pizza</h3></div>
+                        </div>
+                        <div class="portfolio">
+                            <img src="assets/images/papamurphys.PNG" alt="Papa Murphy's">
+                            <div class="port_text_banner"><h3>Pizza Pie</h3></div>
+                        </div>
+                        <div class="portfolio">
+                            <img src="assets/images/papamurphys.PNG" alt="Papa Murphy's">
+                            <div class="port_text_banner"><h3>Slice It</h3></div>
+                        </div>
+                        <div class="portfolio">
+                            <img src="assets/images/tetris.jpg" alt="Papa Murphy's">
+                            <div class="port_text_banner"><h3>Old Skool</h3></div>
+                        </div>
+                        <div class="portfolio">
+                            <img src="assets/images/NIN-SM.jpg" alt="Papa Murphy's">
+                            <div class="port_text_banner"><h3>Nostalgia</h3></div>
+                        </div>
+                    </div>
                 
                 </div>
                 <div class="col-sm-4 ml-auto mt-3 mb-3 mr-0">
