--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
 <body>
     <div class="container-fluid" id="navbar">
         <div class="container p-0" id=cont_nav>
-            <nav class="navbar navbar-expand-sm navbar-light bg-faded p-0 m-0" id="navbar">
+            <nav class="navbar navbar-expand-sm navbar-light bg-faded p-0 m-0">
                 <div id="nav-brand" class="p-3 mr-auto">
-                    <a class="navbar-brand h1 p-0 m-0" id="h1_name" class="m-auto">Madhav Parekh</a>
+                    <a class="navbar-brand h1 p-0 m-0" id="h1_name">Madhav Parekh</a>
                 </div>
                 <div class="navbar-collapse" id="navbar1">
                     <ul class="navbar-nav ml-auto">
