--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 <body>
     <div class="container-fluid" id="navbar">
@@ -20,10 +21,10 @@
                 </div>
                 <div class="navbar-collapse" id="navbar1">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link p-2" href="index.html">About</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link p-2" href="portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
@@ -41,22 +42,21 @@
                 <div class="col-sm-7 mr-auto mt-3 mb-3" id="about_me_box">
                     <h2 class="mb-0">About Me</h2>
                     <hr>
-                    <span>
-                        <img class="img-fluid float-left m-3" src="assets/images/IMG_20151009_114740.jpg" alt="ooops" width="200">
-                        <!-- <img class="img-fluid float-left m-3" src="assets/images/IMG_20151009_114748.jpg" alt="ooops" width="200" height="300"> -->
-                    </span>
-                    
-                    <p class="m-3">
-                        Ever evolving web technologies have kept me fascinated for years and now have brought me to this boot camp to learn full stack development.
-                        <br><br>
-                        I have spent several years developing and testing software protocols for cellular network technology such as GPRS, UMTS, and 2G/3G in early 2000s. And for past 12+ years, I have been successfully running 2 franchised restaurants. My involvement with Franchisee System has sharpened my Fiscal & Business Management, Organizational, Negotiation, and Interpersonal skills.
-                        <br><br>
-                        However, my passion of coding and networking always stayed with me. I have automated many repetitive tasks of accountings and payrolls with coding scripts and Microsoft Office. I have designed & maintained failsafe Internet Networks with utmost security & scalability. I was one of the six Franchisees who took an initiative to design, implement, and debug Point of Sales Systems with the Franchisor, which has been rolled out to 1500+ restaurants.  I have kept up with developments in the field of technology by reading articles and online tutorials.
-                        <br><br>
-                        During this boot camp, Frontend is where I will struggle more as UI/GUI is not my forte and Backend is where I should be ok as I have done a lot of work on server side with scripts, queries, and algorithms.
-                        <br><br>
-                        I am hoping to learn ins and outs of web technologies from this boot camp and hit the ground running.
-                    </p>
+                    <form action="#">
+                        <label for="name">Name</label>
+                        <br>
+                        <input type="text" id="name" name="name" placeholder="John Doe">
+                        <br>
+                        <label for="email">Email</label>
+                        <br>
+                        <input type="text" id="email" name="email" placeholder="example@domain.com">
+                        <br>
+                        <label for="message">Message</label>
+                        <br>
+                        <textarea id="message" name="message" placeholder="Write something.." style="height:200px"></textarea>
+                        <br>
+                        <input type="submit" value="Submit">
+                    </form>
                 
                 </div>
                 <div class="col-sm-4 ml-auto mt-3 mb-3 mr-0">
