changed titles to match htmls

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>About Me :: Bootstrap-Portfolio</title>
+    <title>Portfolio :: Bootstrap-Portfolio</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -39,7 +39,7 @@
             <div class="row">
 
                 <div class="col-sm-7 mr-auto mt-3 mb-3" id="about_me_box">
-                    <h2 class="mb-0">About Me</h2>
+                    <h2 class="mb-0">Portfolio</h2>
                     <hr>
                     <div class="portfolio_content">
                         <div class="portfolio">
